# Controller-HA-for-AWS

./: .#controller_ha.py  .gitignore  Existing-Controller-README.md  Makefile  README.md  aviatrix-aws-existing-controller-ha.json  aviatrix-aws-quickstart-with-ha.json  aviatrix-aws-quickstart.json  aviatrix-lambda-policy  aviatrix_ha.py  controller_ha.py  push_to_s3.py  pyproject.toml  test.py  update.sh  version.py
api/: login.py
aviatrix_ha/: __init__.py  version.py
aviatrix_ha/api/: account.py  client.py  cust.py  enable_central_services_staging_mode.py  initial_setup.py  login.py  restore.py  upgrade_to_build.py
aviatrix_ha/common/: constants.py
aviatrix_ha/csp/: eip.py  instance.py  keypair.py  lambda_c.py  s3.py  sg.py  subnets.py  target_group.py
aviatrix_ha/errors/: exceptions.py
aviatrix_ha/handlers/asg/: event.py  handler.py
aviatrix_ha/handlers/cft/: create.py  delete.py  handler.py  response.py
aviatrix_ha/handlers/function/: handler.py
aviatrix_ha/tools/: string_utils.py
cft/: aviatrix-aws-existing-controller-ha-v3.json  aviatrix-aws-existing-controller-ha-v4.json  aviatrix-aws-existing-controller-ha.json
common/: constants.py
csp/: instance.py  lambda_c.py  s3.py  sg.py  subnets.py  target_group.py
handlers/asg/: event.py  handler.py
handlers/cft/: create.py  delete.py  handler.py
scripts/: create_s3_buckets.py  push_to_s3.py  pylint.sh  update.sh
src/: version.py
src/api/: initial_setup.py  upgrade_to_build.py
src/csp/: eip.py  lambda_c.py  s3.py
src/errors/: exceptions.py
src/handlers/asg/: event.py
src/handlers/cft/: create.py  delete.py  handler.py  response.py
test/: test.py
tests/: check_ami_id_test.py  test_api_client.py  test_e2e.py  test_lambda.py
tests/terraform/e2e_controller/: .terraform.lock.hcl  api.tf  aviatrix-aws-existing-controller-ha-v3-dev.json  cloud-config.yaml  ha.tf  main.tf  provider.tf  variables.tf
tools/: string_utils.py
