[tool.poetry]
name = "aviatrix_ha"
version = "3.00"
description = "Aviatrix Controller HA Lambda functions"
authors = ["Aviatrix <support@aviatrix.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31.0"
urllib3 = "^2.2.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
responses = "^0.25.0"
pytest = "^8.1.1"
pytest-httpserver = "^1.1.0"
boto3 = "^1.34.64"
pylint = "^3.1.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.13.0"
types-requests = "^2.32.0.20241016"
types-pyyaml = "^6.0.12.20241221"
trustme = "^1.2.0"
moto = {extras = ["ec2", "lambda", "sts"], version = "^5.0.22"}
cfn-lint = "^1.22.1"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
